# udesc-testes-de-software-trabalho-1

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/: auth.py  database.py  main.py
src/routers/: task.py  user.py
tests/douglas/: conftest.py
tests/douglas/integration_tests/: te_douglas_integration.py  test_douglas_integration.py  test_douglas_task_integration.py  test_douglas_task_integration_is_completed.py  test_integration.py
tests/douglas/teste_douglas_integration/: test_douglas_task_integration_is_completed.py
tests/douglas/unit_tests/: te_douglas_unit_tasks.py  test_douglas_task.py  test_douglas_unit_tasks.py  test_douglas_user_task.py  test_tasks.py
tests/felipe/: conftest.py
tests/felipe/integration_tests/: te_felipe_integration.py  test_felipe_integration.py  test_felipe_integration_auth.py  test_felipe_integration_user.py  test_integration.py
tests/felipe/unit_tests/: te_felipe_unit_auth.py  te_felipe_unit_tasks.py  test_auth.py  test_felipe_auth.py  test_felipe_task.py  test_felipe_unit_auth.py  test_felipe_unit_tasks.py  test_felipe_user.py  test_tasks.py
